--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/common": "^8.2.3",
     "@nestjs/config": "^1.1.3",
     "@nestjs/core": "^7.6.18",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
-    "class-validator": "^0.13.2",
     "class-transformer": "^0.3.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +44,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
